feat(typesafe): add native system one provider integration
